[FIX] WebSocket 큐 destination 불일치 문제 해결
- ChatController와 ChatWebSocketService의 큐 destination 통일
- /queue/chat에서 /queue/chatbot으로 변경하여 일관성 확보
- AiServerSseManager 불필요한 의존성 제거 및 코드 정리
- StreamingSessionManager 미사용 import 정리

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>